feat(SecurityManager): Java 程序安全控制，使用安全管理控制器
注意：使用安全管理器需要在编译时注册安全管理器，还是会存在系统层面的漏洞

使用的命令为：
java -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=MySecurityManager Main

注意，windows 下要用分号间隔多个类路径！